Fix header for tablet and text alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -68,26 +68,28 @@
     background: #3CDBC0;
     color: #FFFFFF;
     height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-transform: capitalize;
 }
 
 .title {
     font-size: 30px;
     text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
+    width: 200px;
+    text-transform: capitalize;
     }
 
 /*tablet and desktop*/
 @media all and (min-width: 768px) {
     .header {
         flex-wrap: nowrap;
-        justify-content: flex-end;
+        justify-content: space-between;
         padding: 20px 30px;
         box-sizing: border-box;
+        margin-top: 0;
+        align-items: center;
     }
     .logo__box {
         justify-content: flex-start;
